# rosalind

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/rosalind/: __init__.py  example.py
src/rosalind/dna_nucleotides/: codon.py  complementing.py  counting.py  counting_mutation.py  fibonacci.py  gc_content.py  mendel_first_law.py  punnett.py  transcribe.py
src/rosalind/fasta/: fasta.py
src/rosalind/motif/: motif.py
tests/: conftest.py  test_sanity.py
tests/DNANucleotides/: test_codon.py  test_complementing.py  test_counting.py  test_counting_mutation.py  test_fibonacci.py  test_gc_content.py  test_mendel_first_law.py  test_punnett.py  test_transcribe.py
tests/fasta/: test_fasta.py
tests/motif/: test_motif.py
