[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosalind"
version = "0.1.0"
description = "Projet Python initialisé en src layout, prêt pour tests et qualité."
readme = "README.md"
authors = [{ name = "Votre Nom", email = "vous@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=rosalind --cov-report=term-missing"
xfail_strict = true
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/rosalind"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rosalind*"]
