[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosalind-solutions"
version = "0.1.0"
description = "Personal solutions to Rosalind bioinformatics problems"
authors = [
    {name = "Nicolas"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/rosalind",
    "--cov-report=term-missing",
]
